2007-09-12  Tambet Ingo  <tambet@gmail.com>

	* src/applet.c: Rewrite the VPN connection handling now that everything
	underneath has changed.

	* src/vpn-properties/nm-vpn-ui-interface.h: Convert properties to hash tables
	eveyrwhere.

	* src/vpn-properties/nm-vpn-properties.c: Create properties hash tables instead
	of GSLists.

	* src/vpn-password-dialog.c: Passwords are now dictionary items. Use odd strings
	from the helper output as keys, even keys for values.

	* src/vpn-connection-info.[ch]: Implement.

2007-09-11  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_get_secrets): fix it; need to
			specify the keyring items in a lot more detail now, using the
			connection name, the setting name, and the setting key for each
			secret

2007-09-11  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_item_activate): Fix up device activation for changes
			in argument types for Activate

2007-09-09  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- Clean up applet widget creation and finalization

2007-09-06  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- Random cleanups; dropdown_menu -> menu, clean up usage of
			nma_menu_clear(), kill nma_dropdown_menu_populate(), fix
			menu destruction to ensure we don't leak widgets

2007-09-06  Dan Williams  <dcbw@redhat.com>

	* src/menu-items.c
	  src/menu-items.h
		- (nm_network_menu_item_init): keep track of the hbox so it can be
			destroyed when necessary
		- (nm_network_menu_item_class_dispose, nm_network_menu_item_class_init):
			dispose of subwidgets as necessary; dispose of hash if needed

2007-09-02  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
	  src/applet-dbus-settings.h
		- Update user settings daemon D-Bus defines now that it's in
			NetworkManager.h
		- s/applet_connection->settings/applet_connection->connection/g since
			that's what it really is
		- Update for change of NMConnection to GObject subclass