@@ -1,3 +1,11 @@
+2007-09-13  Dan Williams  <dcbw@redhat.com>
+
+	* src/gconf-helpers.c
+	  src/gconf-helpers.h
+		- (nm_gconf_set_int_helper, nm_gconf_set_string_helper, 
+		   nm_gconf_set_bool_helper, nm_gconf_set_stringlist_helper,
+		   nm_gconf_set_bytearray_helper): new functions
+
 2007-09-12  Tambet Ingo  <tambet@gmail.com>
 
 	* src/applet.c: Rewrite the VPN connection handling now that everything
